# grokipedia-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
grokipedia_mcp/: __main__.py  server.py
